# packages/contract/kubb/types/PaginatedMeta.ts
@@ -1,0 +1,26 @@
+export type PaginatedMeta = {
+    /**
+     * @type integer
+    */
+    page: number;
+    /**
+     * @type integer
+    */
+    pageSize: number;
+    /**
+     * @type integer
+    */
+    total: number;
+    /**
+     * @type integer
+    */
+    totalPages: number;
+    /**
+     * @type integer
+    */
+    nextPage: number;
+    /**
+     * @type integer
+    */
+    prevPage: number;
+};
