# packages/contract/kubb/types/ServerError.ts
@@ -1,0 +1,12 @@
+export type ServerError = {
+    /**
+     * @description The status code for the error
+     * @type string
+    */
+    code: string;
+    /**
+     * @description A more descriptive message about the error
+     * @type string
+    */
+    message: string;
+};
