# packages/contract/kubb/types/controllers/product/ProductsCreate.ts
@@ -1,5 +1,5 @@
 import { BadRequest } from "../../BadRequest";
-import { Error } from "../../Error";
+import { ServerError } from "../../ServerError";
 import { ProductCreate } from "../../ProductCreate";
 import type { Product } from "../../Product";
 
@@ -12,9 +12,9 @@ export type ProductsCreate200 = Product;
 */
 export type ProductsCreate400 = BadRequest;
 /**
- * @description An unexpected error response.
+ * @description Server error
 */
-export type ProductsCreateError = Error;
+export type ProductsCreate500 = ServerError;
 export type ProductsCreateMutationRequest = ProductCreate;
 /**
  * @description The request has succeeded.
@@ -23,5 +23,5 @@ export type ProductsCreateMutationResponse = Product;
 export type ProductsCreateMutation = {
     Response: ProductsCreateMutationResponse;
     Request: ProductsCreateMutationRequest;
-    Errors: ProductsCreate400;
+    Errors: ProductsCreate400 | ProductsCreate500;
 };
